Bluewolf SFMTA/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Administrative Hearing Process</fullName>
        <description>Process for handling tow hearing requests and tow protests.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Denied</fullName>
        </values>
        <values>
            <fullName>Failure to Appear</fullName>
        </values>
        <values>
            <fullName>Pending Hearing Officer Review</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Upheld</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Bike Parking Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>Installed</fullName>
        </values>
        <values>
            <fullName>Not Installed</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Pending Work Order</fullName>
        </values>
        <values>
            <fullName>Remove</fullName>
        </values>
        <values>
            <fullName>Sub-Status</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Surveyed</fullName>
        </values>
        <values>
            <fullName>Work Ordered</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Block Party Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Appealed</fullName>
        </values>
        <values>
            <fullName>Application In Review</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Disapproved</fullName>
        </values>
        <values>
            <fullName>Closed - Event</fullName>
        </values>
        <values>
            <fullName>Closed - Invalid</fullName>
        </values>
        <values>
            <fullName>Closed - Not Approved</fullName>
        </values>
        <values>
            <fullName>Closed - Permitted</fullName>
        </values>
        <values>
            <fullName>Closed - Withdrawn by Requestor</fullName>
        </values>
        <values>
            <fullName>Draft</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>Pending Additional Information</fullName>
        </values>
        <values>
            <fullName>Public Hearing Assigned</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DOT%2FGov Affairs Support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Driveway Red Tip Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Appealed</fullName>
        </values>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Approved with Conditions</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Implemented in Field</fullName>
        </values>
        <values>
            <fullName>Denied</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>Pending Additional Information</fullName>
        </values>
        <values>
            <fullName>Pending Customer Response</fullName>
        </values>
        <values>
            <fullName>Pending Installation</fullName>
        </values>
        <values>
            <fullName>Pending Revocation</fullName>
        </values>
        <values>
            <fullName>Pending Survey</fullName>
        </values>
        <values>
            <fullName>Revoked</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Feedback Case Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>General Color Curb Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Appealed</fullName>
        </values>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Denied</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>Pending Additional Information</fullName>
        </values>
        <values>
            <fullName>Pending Installation</fullName>
        </values>
        <values>
            <fullName>Pending Public Hearing</fullName>
        </values>
        <values>
            <fullName>Pending Revocation</fullName>
        </values>
        <values>
            <fullName>Pending Survey</fullName>
        </values>
        <values>
            <fullName>Public Hearing Assigned</fullName>
        </values>
        <values>
            <fullName>Revoked</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>MTA IT - this is for our internal cases to track and report against</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Production</fullName>
        </values>
        <values>
            <fullName>In Review Queue</fullName>
        </values>
        <values>
            <fullName>In Sandbox</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>STL Administrative Penalties Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Penalty Applied %28Closed%29</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Successfully Contested %28Closed%29</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>STL Citation Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>STL Collision%2FBreakdown Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved %28Closed%29</fullName>
        </values>
        <values>
            <fullName>Rejected %28Closed%29</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>STL Complaint Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>STL Detour Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved %28Closed%29</fullName>
        </values>
        <values>
            <fullName>Rejected %28Closed%29</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>STL Sticker Replacement Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved %28Closed%29</fullName>
        </values>
        <values>
            <fullName>Rejected %28Closed%29</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Special Events Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Appealed</fullName>
        </values>
        <values>
            <fullName>Application In Review</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Disapproved</fullName>
        </values>
        <values>
            <fullName>Closed - Event</fullName>
        </values>
        <values>
            <fullName>Closed - Implemented in Field</fullName>
        </values>
        <values>
            <fullName>Closed - Invalid</fullName>
        </values>
        <values>
            <fullName>Closed - Not Approved</fullName>
        </values>
        <values>
            <fullName>Closed - Permitted</fullName>
        </values>
        <values>
            <fullName>Closed - Withdrawn by Requestor</fullName>
        </values>
        <values>
            <fullName>Draft</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Additional Information</fullName>
        </values>
        <values>
            <fullName>Public Hearing Assigned</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Temporary Signs Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved - Pending Payment</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>Installed</fullName>
        </values>
        <values>
            <fullName>Pending Customer Response</fullName>
        </values>
        <values>
            <fullName>Pending Installation</fullName>
        </values>
        <values>
            <fullName>Pending Removal</fullName>
        </values>
        <values>
            <fullName>Printed %26 Filed</fullName>
        </values>
        <values>
            <fullName>Ready for Printing</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Removed</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Temporary Two Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>Pending Customer Response</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Action_Taken__c</fullName>
        <description>Previously &quot;Concern&quot;</description>
        <label>Action Taken</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Amplified_Sound__c</fullName>
        <label>Amplified Sound?</label>
        <picklist>
            <picklistValues>
                <fullName>Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Attachment_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachment Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <label>Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Block_Party_Activities__c</fullName>
        <inlineHelpText>You may select more than one activity by holding the shift button and clicking the items that are applicable</inlineHelpText>
        <label>Block Party Activities</label>
        <picklist>
            <picklistValues>
                <fullName>Bouncy House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amplified Sound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acoustic Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBQ/Grill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potluck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Trucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Food</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Block_Party_Qualification_Questions__c</fullName>
        <defaultValue>&quot;By submitting this Block Party application, I affirm the following:&quot;&amp; BR() &amp;
&quot;∙ This is a residential street&quot;&amp; BR() &amp;
&quot;∙ Muni does not have a bus or train on this street&quot; &amp; BR() &amp;
&quot;∙ I am a resident of this street or am representing a local neighborhood organization&quot;</defaultValue>
        <label>Block Party Qualification Questions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Busiest_Hours__c</fullName>
        <label>Busiest Hours</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Hours__c</fullName>
        <inlineHelpText>Please list hours that your business is open.</inlineHelpText>
        <label>Business Hours</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Name_if_applicable__c</fullName>
        <label>Business Name (if applicable)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Square_Feet__c</fullName>
        <label>Business Square Feet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Temporary Signs Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Street Closures Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bike Parking Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color Curbs Program</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Location__c</fullName>
        <label>Case Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Case_Synopsis__c</fullName>
        <description>Brief summary of the case</description>
        <label>Case Synopsis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_type__c</fullName>
        <label>Case type</label>
        <picklist>
            <picklistValues>
                <fullName>DOT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gov Affairs</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closure_End_2__c</fullName>
        <label>Closure End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closure_End_3__c</fullName>
        <label>Closure End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closure_End__c</fullName>
        <label>Closure End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closure_Start_2__c</fullName>
        <label>Closure Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closure_Start_3__c</fullName>
        <label>Closure Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closure_Start__c</fullName>
        <label>Closure Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Conflict_Description__c</fullName>
        <label>Conflict Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conflicts__c</fullName>
        <label>Conflicts</label>
        <summaryFilterItems>
            <field>Location__c.Conflict_Found__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Location__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Content_Expert__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content Expert</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.Id</field>
                <operation>equals</operation>
                <value>012t0000000PGw0</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Content Expert Lookup)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corral_Mural__c</fullName>
        <label>Corral Mural</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cross_Street_1__c</fullName>
        <label>Cross Street 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cross_Street_2__c</fullName>
        <label>Cross Street 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cross_Street_3__c</fullName>
        <label>Cross Street 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Rack_Type__c</fullName>
        <label>Custom Rack Type</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Rack__c</fullName>
        <inlineHelpText>If yes, please upload Gift Agreement after submission</inlineHelpText>
        <label>Design Type</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Detail_Link__c</fullName>
        <formula>&quot;https://bwdev-customer.cs33.force.com/s/case/&quot; + Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Detail Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Perspective__c</fullName>
        <label>Customer Perspective</label>
        <picklist>
            <picklistValues>
                <fullName>When I am riding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>When I am walking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>When I am biking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>When I am driving/parking</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Daily_or_24_Hours_Continuous_Enforcement__c</fullName>
        <label>Daily or 24 Hours Continuous</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Daily_or_24_Hours_Continuous_Event__c</fullName>
        <label>Daily or 24 Hours Continuous</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Hearing_Scheduled__c</fullName>
        <label>Date Hearing Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <description>Initial date of receipt</description>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <label>Days Open</label>
        <picklist>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Delineators__c</fullName>
        <label># Delineators</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distance_from_Ref_Point__c</fullName>
        <label>Distance from Ref Point</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>Board of Directors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director of Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications &amp; Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Subway Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Programs &amp; Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance &amp; Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainable Streets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxis &amp; Accessible Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transit</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_you_plan_to_post_for_no_parking__c</fullName>
        <label>Do you plan to post for no parking?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EMS_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>There is a requirement for an Emergency Medical Service Plan for all athletic events as well as any event with more than 2,500 people. An initial plan is required with the ISCOTT application. For more information visit:
http://www.sfdem.org/index.aspx?</inlineHelpText>
        <label>EMS Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMS_Needed_by_Date__c</fullName>
        <label>EMS Needed by Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enforcement_End__c</fullName>
        <label>Enforcement End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Enforcement_Start__c</fullName>
        <label>Enforcement Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Environmental_doc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Environmental doc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Attendance__c</fullName>
        <label>Estimated Attendance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_times_of_highest_usage__c</fullName>
        <label>Estimated times of highest usage</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Calendar__c</fullName>
        <label>Event Calendar</label>
        <picklist>
            <controllingField>Recurring__c</controllingField>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Event_Description__c</fullName>
        <label>Event Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_End__c</fullName>
        <label>Event End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Start__c</fullName>
        <label>Event Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Website__c</fullName>
        <label>Event Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Event_is_on_Port_Property__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check if any or all of the event is on Port Property.</inlineHelpText>
        <label>Event is on Port Property</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Number_of_Racks__c</fullName>
        <label>Existing Number of Racks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Point_of_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Point of Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (External Point of Contact Lookup)</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fee_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Government Agencies providing public services, and non-profits that provide free services to seniors and people with disabilities are exempt from fees.</inlineHelpText>
        <label>Fee Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Recipient</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.Id</field>
                <operation>equals</operation>
                <value>012t0000000PGw0</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Food_Truck_Vendor__c</fullName>
        <label>Food Truck Vendor Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Footage__c</fullName>
        <label>Footage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Front_Side_Rear_of_building__c</fullName>
        <label>Front/Side/Rear of building</label>
        <picklist>
            <picklistValues>
                <fullName>Front</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Side</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Within Frontage</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_you_closed_street_before__c</fullName>
        <label>Have you closed street before?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hearing_DateTOW__c</fullName>
        <formula>Parent.Date_Hearing_Scheduled__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hearing Date Formula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hearing_Decision_Date__c</fullName>
        <label>Hearing Decision Date</label>
        <type>Date</type>
    </fields>
</CustomObject>